# barcode-scanner

./: .gitignore  CMakeLists.txt  DartConfiguration.tcl  README.md  hough.cpp  main.cpp  pass.h  result.h  scanner.cpp  scanner.h  sobel.cpp  symbologies.h  threshold.cpp  threshold.h  transforms.h  video.cpp
Compile/: DartConfiguration.tcl
Compile/SampleApps/: edge  hough  librarySample  sobel  video
Debug/: DartConfiguration.tcl
Debug/.cmake/api/v1/reply/: cache-v2-6151e85232d3215750e9.json  codemodel-v2-6c20715c5fd350eaf1ab.json  index-2021-05-21T16-12-36-0411.json  target-Continuous-Debug-d0a6766f61d559816d76.json  target-ContinuousBuild-Debug-705438b244795c7175aa.json  target-ContinuousConfigure-Debug-1b23bb65140d0229e933.json  target-ContinuousCoverage-Debug-9943b104ff03c55d24ec.json  target-ContinuousMemCheck-Debug-4021f7356c2a820d8605.json  target-ContinuousStart-Debug-eb923f06b891c72a6062.json  target-ContinuousSubmit-Debug-58299c0e862dc145a663.json  target-ContinuousTest-Debug-5e72690d9cdbabd3e7c5.json  target-ContinuousUpdate-Debug-a16e237d95652548229b.json  target-Decoding-Debug-b009fc53a8db9b2109f2.json  target-Experimental-Debug-2abc6eb75a1957c72dc9.json  target-ExperimentalBuild-Debug-874dbf1ca8851a208ba8.json  target-ExperimentalConfigure-Debug-a8bac79de4e2a0a4f670.json  target-ExperimentalCoverage-Debug-4e3769ee7e65d4230e5e.json  target-ExperimentalMemCheck-Debug-86a1f35106c9bf0d7e78.json  target-ExperimentalStart-Debug-85bc7a346720cbc84498.json  target-ExperimentalSubmit-Debug-f32423e545df2514756f.json  target-ExperimentalTest-Debug-fe7c433385abad301bc8.json  target-ExperimentalUpdate-Debug-43f5378ae450a1a9c440.json  target-Nightly-Debug-d595a9fa5107fe06c70c.json  target-NightlyBuild-Debug-4d71be61f2f42ade2d3d.json  target-NightlyConfigure-Debug-cb5eb64bdc61ab6f8a1c.json  target-NightlyCoverage-Debug-763168ce92c245471b4e.json  target-NightlyMemCheck-Debug-c6f1ae14621ce3b059d1.json  target-NightlyMemoryCheck-Debug-f7e18db62a6a380fce57.json  target-NightlyStart-Debug-48e927fe729385848b2f.json  target-NightlySubmit-Debug-1eada29c7ab34dedff6f.json  target-NightlyTest-Debug-288e4f53dfd974853faf.json  target-NightlyUpdate-Debug-50c9f9f8acc8da8b49e8.json  target-Preprocessing-Debug-f8e6f81488d7da379e40.json  target-Threshold-Debug-360c7f45b1617d87c32d.json  target-edge-Debug-edcd21d75621104cbadf.json  target-hough-Debug-a3a4849e317e28b02426.json  target-librarySample-Debug-99b59e0c7ca3c4b88597.json  target-libtests-Debug-8d96dd6bb21d74017599.json  target-roi-Debug-3e16afd89612b4153802.json  target-sobel-Debug-ec9ff2375628d436aa40.json  (+1 more)
Debug/SampleApps/: decodeSample  edge  hough  librarySample  roi  sobel  video
Decoding/: CMakeLists.txt  code128.cpp  code128.h  code39.cpp  code39.h  decoder.cpp  decoder.h  ean13.cpp  ean13.h  ean8.cpp  ean8.h  multiDecoder.cpp  multiDecoder.h
Misc/: Architecture.uxf
Preprocessing/: CMakeLists.txt  process.cpp  process.h
Release/: DartConfiguration.tcl
Release/SampleApps/: edge  hough  librarySample  roi  sobel  video
SampleApps/: CMakeLists.txt  decodeSample.cpp  edge.cpp  finalSample.cpp  identifySample.cpp  librarySample.cpp  roi.cpp  sobel.cpp  video.cpp
Testing/: CMakeLists.txt  decode.test.cpp  main.test.cpp  process.test.cpp
Tests/: CMakeLists.txt  libtests_include-b12d07c.cmake  process.test.cpp
images/: IMG_20210525_174010.jpg~  IMG_20210525_174016.jpg~  IMG_20210525_174027.jpg~
