add_executable(sobel sobel.cpp)
add_executable(hough hough.cpp)
add_executable(edge edge.cpp)
add_executable(video video.cpp)
add_executable(roi roi.cpp)
add_executable(identifySample identifySample.cpp)
add_executable(decodeSample decodeSample.cpp)
add_executable(finalSample finalSample.cpp)

# Link OpenCV to executables
target_link_libraries( sobel ${OpenCV_LIBS} Preprocessing Decoding )
target_link_libraries( hough ${OpenCV_LIBS} Preprocessing Decoding )
target_link_libraries( edge ${OpenCV_LIBS} Preprocessing Decoding )
target_link_libraries( video ${OpenCV_LIBS} Preprocessing Decoding )
target_link_libraries( roi ${OpenCV_LIBS} Preprocessing Decoding )
target_link_libraries( identifySample ${OpenCV_LIBS} Preprocessing Decoding )
target_link_libraries( decodeSample ${OpenCV_LIBS} Preprocessing Decoding )
target_link_libraries( finalSample ${OpenCV_LIBS} Preprocessing Decoding Scanner )